<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kalkulator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    
    <string name="btnEq">=</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnMul">x</string>
    <string name="btnDiv">/</string>
    
    <string name="btnDot">.</string>
    <string name="btnAC">AC</string>
    <string name="btnBkspc">Bksp</string>
    <string name="btnNeg">+/-</string>

    <string name="empty">0</string>
    
    <!-- EXTENDED CALC -->
    
    <string name="btnSqrd">^2</string>
    <string name="btnCub">^3</string>
    <string name="btnLn">ln</string>
    <string name="btnLog">log</string>
    <string name="btnSqrt">sqrt</string>
    <string name="btnPer">%</string>
    <string name="btnInv">1/x</string>
    <string name="btnExp">^x</string>
</resources>
