<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalcActivity" >

    <Button
        android:id="@+id/ButtonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btnDot" />

    <Button
        android:id="@+id/Button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ButtonDot"
        android:text="@string/btn0" />

    <Button
        android:id="@+id/ButtonEq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button0"
        android:layout_alignBottom="@+id/Button0"
        android:layout_toRightOf="@+id/Button0"
        android:text="@string/btnEq" />

    <Button
        android:id="@+id/ButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonEq"
        android:layout_alignBottom="@+id/ButtonEq"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/ButtonEq"
        android:text="@string/btnAdd" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonDot"
        android:layout_alignLeft="@+id/ButtonDot"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button1"
        android:layout_alignBottom="@+id/Button1"
        android:layout_toLeftOf="@+id/ButtonEq"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button2"
        android:layout_alignBottom="@+id/Button2"
        android:layout_toLeftOf="@+id/ButtonAdd"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button1"
        android:layout_toLeftOf="@+id/Button2"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/Button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button4"
        android:layout_alignBottom="@+id/Button4"
        android:layout_toRightOf="@+id/Button4"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/Button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button5"
        android:layout_alignBottom="@+id/Button5"
        android:layout_toRightOf="@+id/Button5"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/Button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button4"
        android:layout_toLeftOf="@+id/Button5"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/Button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Button7"
        android:layout_toLeftOf="@+id/Button6"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/Button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button5"
        android:layout_toRightOf="@+id/Button5"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/ButtonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonAdd"
        android:layout_alignRight="@+id/ButtonAdd"
        android:layout_below="@+id/Button6"
        android:text="@string/btnSub" />

    <Button
        android:id="@+id/ButtonMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonSub"
        android:layout_alignRight="@+id/ButtonSub"
        android:layout_below="@+id/Button9"
        android:text="@string/btnMul" />

    <Button
        android:id="@+id/ButtonDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button9"
        android:layout_alignBottom="@+id/Button9"
        android:layout_alignLeft="@+id/ButtonMul"
        android:layout_alignRight="@+id/ButtonMul"
        android:text="@string/btnDiv" />

    <Button
        android:id="@+id/ButtonAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button7"
        android:layout_alignRight="@+id/Button8"
        android:layout_alignLeft="@+id/Button7"
        android:text="@string/btnAC" />

    <Button
        android:id="@+id/ButtonNeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonAC"
        android:layout_alignBottom="@+id/ButtonAC"
        android:layout_toLeftOf="@+id/ButtonDiv"
        android:text="@string/btnNeg" />

    <Button
        android:id="@+id/ButtonBkspc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonNeg"
        android:layout_alignBottom="@+id/ButtonDiv"
        android:layout_alignLeft="@+id/ButtonDiv"
        android:layout_alignRight="@+id/ButtonDiv"
        android:text="@string/btnBkspc" />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonNeg"
        android:layout_alignRight="@+id/ButtonBkspc"
        android:layout_marginBottom="44dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tempText"
        android:layout_marginTop="17dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/operatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tempText"
        android:layout_alignBottom="@+id/tempText"
        android:layout_alignParentLeft="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>